Fix sticky on Safari

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -54,6 +54,7 @@ body {
 		height: 100%;
 		margin: 0 64px 0 24px;
 		padding: 24px 0;
+		position: -webkit-sticky;
 		position: sticky;
 		top: 0;
 		width: 162px;
